# CGraphics

./: README.md
LearnRaylib/: CMakeLists.txt
LearnRaylib/include/: Camera.h  DirectionalLight.h  Light.h  Material.h  Mesh.h  Model.h  PointLight.h  Scene.h  Shader.h  ShadowMap.h  SpotLight.h  Texture.h
LearnRaylib/shaders/: shader.frag  shader.vert
opengl/: .gitignore  CMakeLists.txt  main.cpp
opengl/assets/Models/Chair/: Office_chair.mtl
opengl/assets/Models/Door/: Door_Component_BI3.mtl
opengl/assets/Models/Floor/: floor.mtl
opengl/assets/Models/MoniTest/: Lowpoly_Notebook_2.mtl
opengl/assets/Models/Monitor/: MonitorTeste.mtl
opengl/assets/Models/Table/: standing_desk.mtl  table.mtl
opengl/assets/Models/Terra/: Earth2K.mtl
opengl/assets/Models/Wall/: wall.mtl
opengl/assets/shader/: directional_shadow_map.vert  omni_shadow_map.frag  omni_shadow_map.geom  shader.frag
opengl/camera/: Camera.cpp  Camera.h
opengl/light/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
opengl/material/: Material.cpp  Material.h
opengl/mesh/: Mesh.cpp  Mesh.h
opengl/model/: Model.cpp  Model.h
opengl/shader/: Shader.cpp  Shader.h
opengl/shadow/: OmniShadowMap.cpp  OmniShadowMap.h  ShadowMap.cpp  ShadowMap.h
opengl/skybox/: SkyBox.cpp  SkyBox.h
opengl/src/: Application.cpp  cores.h  my.elf  primitive.h
opengl/src/components/camera/: Camera.h  pch.h
opengl/src/components/render/: renderer.h
opengl/src/components/shader/: Shader.cpp  Shader.h
opengl/src/components/shadow/: ShadowMap.h
opengl/stbImage/: stb_image.h
opengl/texture/: Texture.cpp  Texture.h
opengl/utils/: CommonValues.h  Const.h  Utils.h  pch.cpp  pch.h
opengl/window/: Window.cpp  Window.h
(+124 files in other folders)
